# Icecast-libshout

./: CMakeLists.txt
include/shout/: shout.h
src/: shout.c  shout_private.h
